# arctic_polygen

./: arctic_polygen.py
analysis/test_point_dist/: centers.txt  multiple_circles.m  output.inp
input/: input.txt  input_fine_scale.txt  input_intermediate.txt  params.txt
src/clipper/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  clipper.cpp  cmake_install.cmake
src/fast_PDS/: Makefile  fpd.h  fpd_main.cpp  fpd_sampling.cpp
src/mcgeom-v1.3rc1/: .hg_archival.txt  .hgtags  CMakeLists.txt  Makefile  install  setup
src/mcgeom-v1.3rc1/config/: do-configure
src/mcgeom-v1.3rc1/include/: MCGeom.h
src/mcgeom-v1.3rc1/src/: Circle_thru_3Pts.c  CornerCondNum2.c  CornerCondNum3.c  CornerNormal2.c  Corner_ModCondNum2.c  Corner_ModCondNum3.c  Hex_Angles.c  Hex_CosAngles.c  Hex_MinMaxAngles.c  Hex_MinMaxCosAngles.c  Hex_Volume.c  MatFuncs.c  PF_Angles.c  PF_Area.c  PF_Center.c  PF_Centroid.c  PF_CondNum_i.c  PF_CondNums.c  PF_CosAngles.c  PF_LSSphere.c  PF_MinMaxAngles.c  PF_MinMaxCondNums.c  PF_MinMaxCosAngles.c  PF_Slice.c  PF_Subdivide.c  PP_Dist2.c  PR_Angles.c  PR_CondNums.c  PR_CosAngles.c  PR_MinMaxAngles.c  PR_MinMaxCondNums.c  PR_MinMaxCosAngles.c  PR_Volume.c  P_ClosestPntOnLine.c  P_InPolyFace2D.c  P_InPolyFace3D.c  P_InPolyhedron.c  P_InTet.c  P_MinDist2Quad.c  P_MinDist2Tri.c  (+23 more)
src/mcgeom-v1.3rc1/test/: Makefile  xtest.gmv
src/mcgeom-v1.3rc1/test/src/: main.c
src/mkdual-1.1/: .hg_archival.txt  .hgtags  CMakeLists.txt  Makefile.standalone
src/mkdual-1.1/config/: do-configure
src/mkdual-1.1/include/: del2vor.h  mkdual.h
src/mkdual-1.1/src/: MESH_HasPlanarFaces.c  MESH_MakeDual.c  MESH_MakeDual2.c  MESH_MakeDual3.c  main.c  main.patch
src/mstk/: mstk.cmake
src/mstk/example/: export_mstk  export_mstk.c
src/offset_poly/: Makefile  offset_main_new.cpp  offset_poly.cpp  offset_poly.h
